api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "api-service" 
spec: 
  type: ClusterIP
  selector: 
    app: 
      "synergychat-api"
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30080
      targetPort: 8080
